tests/snapshots/run_wpt_conformance__coreml_isNaN_float32_no_NaN_values.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
is_nan.https.any.js isNaN float32 no NaN values, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: Unsupported operation: isNaN

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    isNaNInput: f32[6];
  }

  nodes {
    [isNaNOutput] = isNaN(isNaNInput, label="");
  }

  outputs { isNaNOutput; }
}
